--- a/src/SdtdServerKit/SdtdServerKit.csproj
+++ b/src/SdtdServerKit/SdtdServerKit.csproj
@@ -23,7 +23,9 @@
 
 	<ItemGroup>
 		<None Include="..\..\LICENSE" Pack="true" PackagePath="" Visible="false" />
-		<None Include="..\..\README.md" Pack="true" PackagePath="" Visible="false" />
+		<None Include="..\..\README.md" Pack="true" PackagePath="" Visible="true" />
+		<None Include="..\..\README.zh.md" Pack="false" PackagePath="" Visible="true" />
+		<None Include="..\..\CHANGELOG.md" Pack="false" PackagePath="" Visible="true" />
 	</ItemGroup>
 
 	<ItemGroup>
