--- a/src/SdtdServerKit/Config/functionsettings.ko.json
+++ b/src/SdtdServerKit/Config/functionsettings.ko.json
@@ -77,7 +77,12 @@
     "PointsNotEnoughTip": "[00FF00]포인트가 부족합니다. 필요한 포인트: {PointsRequired}",
     "CoolingTip": "[00FF00]순간이동 냉각... 남은 시간: {CooldownSeconds}초.",
     "TargetNotFoundTip": "[FF00FF]순간이동 대상을 찾을 수 없습니다. 입력: [00FF00]/tele 친구 이름 [FFFFFF]텔레포트합니다.",
-    "TargetNotFriendTip": "[00FF00]대상이 친구가 아닙니다."
+    "IsFriendBypass": false,
+    "TeleConfirmTip": "[00FF00]플레이어: {PlayerName}이(가) 당신에게 순간이동되기를 원합니다. 동의하려면 Yes를 입력하고, 거부하려면 No를 입력하세요.",
+    "AcceptTele": "Yes",
+    "RejectTele": "No",
+    "TargetRejectTeleTip": "[FF0000]상대방이 전송 요청을 거부했습니다.",
+    "KeepDuration": 30
   },
   "TeleportHomeSettings": {
     "IsEnabled": false,
