--- a/src/SdtdServerKit/Config/functionsettings.zh.json
+++ b/src/SdtdServerKit/Config/functionsettings.zh.json
@@ -76,8 +76,13 @@
     "TeleSuccessTip": "[00FF00]玩家: {PlayerName}, 传送到了: {TargetName} 身旁",
     "PointsNotEnoughTip": "[00FF00]积分不足, 需要积分: {PointsRequired}",
     "CoolingTip": "[00FF00]传送冷却... 剩余时间: {CooldownSeconds} 秒",
-    "TargetNotFoundTip": "[FF00FF]传送目标没有找到, 输入: [00FF00]/tele 好友名称[FFFFFF], 进行传送",
-    "TargetNotFriendTip": "[00FF00]目标不是您的好友"
+    "TargetNotFoundTip": "[FF00FF]传送目标没有找到, 输入: [00FF00]/tele-好友名称[FFFFFF], 进行传送",
+    "IsFriendBypass": false,
+    "TeleConfirmTip": "[00FF00]玩家: {PlayerName}, 想传送到您的身旁, 输入 Yes 同意, 输入 No 拒绝",
+    "AcceptTele": "Yes",
+    "RejectTele": "No",
+    "TargetRejectTeleTip": "[FF0000]对方拒绝了您的传送请求",
+    "KeepDuration": 30
   },
   "TeleportHomeSettings": {
     "IsEnabled": false,
