--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
-  - source: /src/SdtdServerKit/Config/functionsettings.en.json
-    translation: /src/SdtdServerKit/Config/functionsettings.%locale%.json
+  - source: /src/SdtdServerKit/Config/locales/**/*.json
+    translation: /src/SdtdServerKit/Config/locales/%locale%/%original_file_name%
