--- a/src/SdtdServerKit/SdtdServerKit.csproj
+++ b/src/SdtdServerKit/SdtdServerKit.csproj
@@ -30,7 +30,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Autofac.WebApi2.Owin" Version="6.2.1" />
-		<PackageReference Include="DeviceId" Version="6.7.0" />
+		<PackageReference Include="DeviceId" Version="6.8.0" />
 		<PackageReference Include="IceCoffee.Common" Version="1.2.0" />
 		<PackageReference Include="IceCoffee.SimpleCRUD" Version="1.4.0" />
 		<PackageReference Include="Microsoft.AspNet.WebApi.OwinSelfHost" Version="5.3.0" />
@@ -42,7 +42,8 @@
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="NSwag.Annotations" Version="14.2.0" />
 		<PackageReference Include="NSwag.AspNet.Owin" Version="14.2.0" />
-		<PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="2.88.9" />
+		<PackageReference Include="SkiaSharp" Version="3.116.1" />
+		<PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="3.116.1" />
 		<PackageReference Include="SQLitePCLRaw.lib.e_sqlite3" Version="2.1.10" GeneratePathProperty="true" />
 		<PackageReference Include="System.Collections.Immutable" Version="9.0.0" />
 		<PackageReference Include="System.Text.Encodings.Web" Version="9.0.0" />
