Added task schedule expression description function
In the `TaskScheduleModel.cs` file, added the `ExpressionDescription` property to get or set the expression description of the task schedule.

In the `SdtdServerKit.csproj` file, added a reference to the `CronExpressionDescriptor` package, version `2.36.0`.

In the `TaskScheduleController.cs` file, added a reference to the `CronExpressionDescriptor` namespace, and added a private static method `GetLocale` to get the locale according to the language.

In the `TaskScheduleController.cs` file, added a private static method `GetExpressionDescription` to get the description of the cron expression.

Modified the `GetAll` method, added a `language` parameter, and added the `ExpressionDescription` property in the returned result.

--- a/src/SdtdServerKit/SdtdServerKit.csproj
+++ b/src/SdtdServerKit/SdtdServerKit.csproj
@@ -31,6 +31,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Autofac.WebApi2.Owin" Version="6.2.1" />
+		<PackageReference Include="CronExpressionDescriptor" Version="2.36.0" />
 		<PackageReference Include="DeviceId" Version="6.8.0" />
 		<PackageReference Include="IceCoffee.Common" Version="1.2.0" />
 		<PackageReference Include="IceCoffee.Cron" Version="1.0.1" />
