--- a/src/SdtdServerKit/SdtdServerKit.csproj
+++ b/src/SdtdServerKit/SdtdServerKit.csproj
@@ -36,6 +36,7 @@
 		<PackageReference Include="IceCoffee.Common" Version="1.2.2" />
 		<PackageReference Include="IceCoffee.Cron" Version="1.0.3" />
 		<PackageReference Include="IceCoffee.SimpleCRUD" Version="1.4.0" />
+		<PackageReference Include="Mapster" Version="7.3.0" />
 		<PackageReference Include="Microsoft.AspNet.WebApi.OwinSelfHost" Version="5.3.0" />
 		<PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.0" />
