Add reference to System.Reflection.Emit
In the SdtdServerKit.csproj file, add reference to System.Reflection.Emit.
The newly added reference includes the following:
* <Reference Include="System.Reflection.Emit">
* <Private>true</Private>
* <HintPath>$(SystemRoot)\Microsoft.NET\Framework64\v$(MSBuildRuntimeVersion)\System.Reflection.Emit.dll</HintPath>

--- a/src/SdtdServerKit/SdtdServerKit.csproj
+++ b/src/SdtdServerKit/SdtdServerKit.csproj
@@ -90,6 +90,10 @@
 			<Private>true</Private>
 			<HintPath>$(SystemRoot)\Microsoft.NET\Framework64\v$(MSBuildRuntimeVersion)\Microsoft.CSharp.dll</HintPath>
 		</Reference>
+		<Reference Include="System.Reflection.Emit">
+			<Private>true</Private>
+			<HintPath>$(SystemRoot)\Microsoft.NET\Framework64\v$(MSBuildRuntimeVersion)\System.Reflection.Emit.dll</HintPath>
+		</Reference>
 		<Reference Include="System.Dynamic">
 			<Private>true</Private>
 			<HintPath>$(SystemRoot)\Microsoft.NET\Framework64\v$(MSBuildRuntimeVersion)\System.Dynamic.dll</HintPath>
